合并大屏管理和接口管理
